Fix sidebar text overflow

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -217,7 +217,8 @@
   }
 
   li {
-    white-space: nowrap;
+    white-space: normal;
+    word-break: break-word;
   }
 
   a {
